--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
 	"manifest_version": 1,
-	"id": "com.testinghello.hello",
+	"id": "com.qomuni.convertayah",
 	"app_min_version": "2.7",
 	"version": "1.0.0",
-	"name": "hello",
+	"name": "Convert-ayah",
 	"description": "",
 	"author": "",
 	"homepage_url": "",
